--- a/app/src/main/res/layout-land/activity_seat_screen.xml
+++ b/app/src/main/res/layout-land/activity_seat_screen.xml
@@ -7,17 +7,6 @@
     android:background="@color/darkblue"
     tools:context=".SeatScreen">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="87dp"
-        android:layout_height="43dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="@string/FavPos"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        tools:layout_editor_absoluteX="54dp"
-        tools:layout_editor_absoluteY="646dp" />
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline6"
         android:layout_width="wrap_content"
@@ -31,14 +20,12 @@
         android:id="@+id/textView10"
         android:layout_width="185dp"
         android:layout_height="44dp"
-        android:layout_marginTop="40dp"
         android:fontFamily="@font/bungee2"
         android:gravity="center"
         android:text="@string/pickPosition"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintEnd_toEndOf="@+id/savebutton_ID"
-        app:layout_constraintStart_toStartOf="@+id/savebutton_ID"
-        app:layout_constraintTop_toBottomOf="@+id/savebutton_ID" />
+        tools:layout_editor_absoluteX="208dp"
+        tools:layout_editor_absoluteY="570dp" />
 
     <LinearLayout
         android:id="@+id/linearLayout7"
@@ -312,16 +299,27 @@
 
     <ImageButton
         android:id="@+id/sittingPos_ID"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_weight="1"
         android:adjustViewBounds="true"
         android:background="@drawable/statelist"
         android:padding="10dp"
         android:scaleType="fitCenter"
         android:src="@drawable/sitting_icon_transparent"
-        tools:layout_editor_absoluteX="325dp"
-        tools:layout_editor_absoluteY="702dp" />
+        tools:layout_editor_absoluteX="182dp"
+        tools:layout_editor_absoluteY="758dp" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="89dp"
+        android:layout_height="36dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/LyingPose"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        tools:layout_editor_absoluteX="74dp"
+        tools:layout_editor_absoluteY="446dp" />
 
     <SeekBar
         android:id="@+id/seekBarDown_ID"
@@ -339,44 +337,75 @@
 
     <ImageButton
         android:id="@+id/favPos_ID"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_weight="1"
         android:adjustViewBounds="true"
         android:background="@drawable/statelist"
         android:padding="18dp"
-        android:scaleType="centerInside"
+        android:scaleType="fitCenter"
         android:src="@drawable/herz_icon_transparent"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="702dp" />
+        tools:layout_editor_absoluteX="93dp"
+        tools:layout_editor_absoluteY="174dp" />
 
     <ImageButton
         android:id="@+id/zeroGPos_ID"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_weight="1"
         android:adjustViewBounds="true"
         android:background="@drawable/statelist"
         android:padding="10dp"
-        android:scaleType="centerInside"
+        android:scaleType="fitCenter"
         android:src="@drawable/zerog_icon_transparent"
-        tools:layout_editor_absoluteX="451dp"
-        tools:layout_editor_absoluteY="702dp" />
+        tools:layout_editor_absoluteX="338dp"
+        tools:layout_editor_absoluteY="758dp" />
 
     <ImageButton
         android:id="@+id/lyingPos_ID"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginEnd="324dp"
-        android:layout_marginBottom="168dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_weight="1"
         android:adjustViewBounds="true"
         android:background="@drawable/statelist"
         android:padding="7dp"
         android:scaleType="fitCenter"
         android:src="@drawable/lying_icon_transparent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        tools:layout_editor_absoluteX="338dp"
+        tools:layout_editor_absoluteY="645dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="87dp"
+        android:layout_height="43dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/FavPos"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        tools:layout_editor_absoluteX="52dp"
+        tools:layout_editor_absoluteY="513dp" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="108dp"
+        android:layout_height="38dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/ZeroGravityPos"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        tools:layout_editor_absoluteX="74dp"
+        tools:layout_editor_absoluteY="392dp" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="85dp"
+        android:layout_height="41dp"
+        android:layout_weight="1"
+        android:gravity="center_horizontal|fill_vertical"
+        android:text="@string/SittingPos"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        tools:layout_editor_absoluteX="54dp"
+        tools:layout_editor_absoluteY="316dp" />
 
     <TextView
         android:id="@+id/seekBarViewInfo_Down_ID"
