Layouts für Light Screen Vorlage

--- a/app/src/main/res/layout/activity_light_screen.xml
+++ b/app/src/main/res/layout/activity_light_screen.xml
@@ -59,14 +59,14 @@
 
     <ImageButton
         android:id="@+id/stopChair_lightScreen_ID2"
-        android:layout_width="110dp"
-        android:layout_height="110dp"
-        android:layout_marginTop="536dp"
-        android:layout_marginEnd="40dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="700dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/stop_button"
+        android:contentDescription="@string/stopchair"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/stopchair" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -136,8 +136,8 @@
         android:id="@+id/linearLayout5"
         android:layout_width="156dp"
         android:layout_height="260dp"
-        android:layout_marginTop="208dp"
-        android:layout_marginEnd="272dp"
+        android:layout_marginTop="536dp"
+        android:layout_marginEnd="164dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -148,42 +148,42 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="55dp"
-            android:singleLine="true"
-            android:imeOptions="actionDone"
             android:ems="10"
             android:gravity="center"
             android:hint="@string/nr1"
+            android:imeOptions="actionDone"
+            android:importantForAutofill="no"
             android:inputType="number"
-            android:textColor="#FFFFFF"
-            android:importantForAutofill="no" />
+            android:singleLine="true"
+            android:textColor="#FFFFFF" />
 
         <EditText
             android:id="@+id/editText_G_ID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="60dp"
-            android:singleLine="true"
-            android:imeOptions="actionDone"
             android:ems="10"
             android:gravity="center"
             android:hint="@string/nr2"
+            android:imeOptions="actionDone"
+            android:importantForAutofill="no"
             android:inputType="number"
-            android:textColor="#FFFFFF"
-            android:importantForAutofill="no" />
+            android:singleLine="true"
+            android:textColor="#FFFFFF" />
 
         <EditText
             android:id="@+id/editText_B_ID"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_marginBottom="20dp"
-            android:singleLine="true"
-            android:imeOptions="actionDone"
             android:ems="10"
             android:gravity="center"
             android:hint="@string/nr2"
+            android:imeOptions="actionDone"
+            android:importantForAutofill="no"
             android:inputType="number"
-            android:textColor="#FFFFFF"
-            android:importantForAutofill="no" />
+            android:singleLine="true"
+            android:textColor="#FFFFFF" />
     </LinearLayout>
 
     <LinearLayout
@@ -325,7 +325,7 @@
         android:layout_width="181dp"
         android:layout_height="47dp"
         android:layout_marginTop="76dp"
-        android:layout_marginEnd="328dp"
+        android:layout_marginEnd="348dp"
         android:fontFamily="@font/bungee2"
         android:text="@string/color_code"
         android:textAlignment="center"
