--- a/app/src/main/res/layout-land/activity_seat_screen.xml
+++ b/app/src/main/res/layout-land/activity_seat_screen.xml
@@ -179,7 +179,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="180dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.94"
+        app:layout_constraintGuide_end="28dp"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -394,13 +394,15 @@
         android:id="@+id/textView5"
         android:layout_width="100dp"
         android:layout_height="35dp"
+        android:layout_marginBottom="48dp"
         android:layout_weight="1"
         android:gravity="center"
         android:text="@string/FavPos"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintBottom_toTopOf="@+id/textView8"
         app:layout_constraintEnd_toEndOf="@+id/textView8"
-        app:layout_constraintStart_toStartOf="@+id/textView8"
-        tools:layout_editor_absoluteY="138dp" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/textView7"
